yes count fix and admin panel update

--- a/public/admin.html
+++ b/public/admin.html
@@ -82,6 +82,7 @@
           <th>#</th>
           <th>NAME</th>
           <th>RESPONSE</th>
+          <th>YES CLICKS</th>
           <th>NO CLICKS</th>
           <th>DATE & TIME</th>
           <th>DELETE</th>
