--- a/public/admin.html
+++ b/public/admin.html
@@ -73,6 +73,8 @@
 
   <div class="action-bar">
     <button id="backBtn">🏠 Back to Home</button>
+    <button id="deleteAllBtn" class="delete-all-btn">🗑️ DELETE ALL</button>
+
   </div>
 
   <div class="table-container">
